# multithread_assignment

./: .gitignore  README.md  git_training.txt
data/: dilation.pbm  image_test.pbm  image_test_erosion_dilation.pbm  small_test_image.pbm  teste.pbm
python_scripts/: erotion.py  example_erosion.py  wrong_dilation.py
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  erosion.c  erosion.h  image_utils.c  image_utils.h  main.c  morphology.c  morphology.h  multithread_assignment  parser.c  parser.h
src/Dilation/: dilation.c  dilation.h  dilation_no_thread.c  dilation_no_thread.h
src/Image_struct/: image_struct.c  image_struct.h  pbm.h
